--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta http-equiv="refresh" content="0; URL='https://synteraction.org'" />
     <title>Redirecting...</title>
+    <script type="text/javascript">
+        // JavaScript fallback for redirection
+        window.location.href = "https://synteraction.org";
+    </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, please <a href="https://synteraction.org">click here</a>.</p>
+    <p>If you are not redirected automatically, please follow <a href="https://synteraction.org">this link</a>.</p>
 </body>
 </html>
